--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #  User configuration
 # -----------------------------------------------------------------------------
 
-title:               Aiden
+title:               Sungmin Cha
 
 # The unique resource location of your page.
 # Set to `https://<username>.github.io` when hosting on GitHub Pages
@@ -18,8 +18,8 @@ tagline:             Ph.D Student
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  Ph.D Student
-  Machine Learning, Deep Learning
+  Ph.D Student majored in
+  Machine Learning and Deep Learning
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
