--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url:                 https://csm9493.github.io
 baseurl:             ""
 
 # A very short description of your page
-tagline:             Ph.D Student
+tagline:             Ph.D Student \n M.IN.D Lab in SKKU
 
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
