--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -32,7 +32,7 @@ isme2n:
     # spotify:         <user>/<number>
     # soundcloud:      <username>
     # lastfm:          <username>
-    instagram:       cccchaaaa
+    instagram:       ccccchaaaaa
     # flickr:          <string@string>
     # 500px:           <username>
     # dribbble:        <username>
