--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@ url:                 https://csm9493.github.io
 baseurl:             ""
 
 # A very short description of your page
-tagline:             If failed, until success  
+tagline:             If failed, until success.  
 
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  Ph.D Student  
-  M.IN.D Lab  
-  SKKU  
+  Ph.D Student 
+  M.IN.D Lab 
+  SKKU 
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
