--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,8 @@ isme2n:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     Ph.D Student  
-    that enjoyed sports
+    M.IN.D Lab  
+    SKKU  
   # This photo will be used in the about section
   picture:
     src:             /assets/img/me.jpeg
