--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ tagline:             If failed, until success.
 description:         |
   Ph.D Student  
   M.IN.D Lab  
-  SKKU  
+  SungKyunKwan Univ  
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
