change univ name

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,7 +10,7 @@ isme2n:
   about:             |
     Ph.D Student  
     M.IN.D Lab  
-    SKKU  
+    SungKyunKwan Univ 
   # This photo will be used in the about section
   picture:
     src:             /assets/img/me.jpeg
