--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,16 +1,16 @@
 # The primary author of this blog.
 # Must be the same as `author` in `_config.yml`.
 # Change `qwtel` to your shortname (used in the front matter to set a page's author, e.g. `author: qwtel`).
-isme2n:
+Sungmin Cha:
   name:              Sungmin Cha
   email:             csm9493@gmail.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
+    csm9493@gmail.com  
     Ph.D Student  
-    M.IN.D Lab  
-    SungKyunKwan Univ 
+    M.IN.D Lab, SKKU 
   # This photo will be used in the about section
   picture:
     src:             /assets/img/me.jpeg
