--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,7 +10,7 @@ Sungmin Cha:
   about:             |
     csm9493@gmail.com  
     Ph.D Student  
-    M.IN.D Lab, SKKU 
+    M.IN.D Lab in SKKU 
   # This photo will be used in the about section
   picture:
     src:             /assets/img/me.jpeg
